# ink_example

./: pnpm-lock.yaml
.build/: __local__.json
contracts/deployments/share_token/: share_token.json  share_token.wasm
contracts/scripts/: deploy.ts
contracts/src/share_token/: Cargo.toml  lib.rs
